--- a/web_client_workspace/01_html/index.html
+++ b/web_client_workspace/01_html/index.html
@@ -57,7 +57,7 @@
             <li><a href="./05_img.html">이미지관련</a></li>
             <li><a href="./06_hyperlink.html">링크관련</a></li>
             <li><a href="./07_media.html">미디어관련</a></li>
-            <li><a href="./08_form.html">from 관련</a></li>
+            <li><a href="./08_form.html">form 관련</a></li>
             <li><a href="./HTML종합실습문제1.html">HTML종합실습문제1</a></li>
             <li><a href="./HTML종합실습문제2.html">HTML종합실습문제2</a></li>
 
