--- a/web_client_workspace/03_javascript/03_getElement.html
+++ b/web_client_workspace/03_javascript/03_getElement.html
@@ -230,8 +230,11 @@
         <th colspan="3">수강신청</th>
         </tr>
         <tr>
-            <td>
-                <input type="checkbox" id="checkAll">
+            <td colspan="3">
+                <!-- onclick, onchange 모두 가능 -->
+                <!-- 모두 선택/해제 체크 -> 국영수 모두 체크
+                     모두 선택/해제 체크 해제 -> 국영수 모두 체크 해제 -->
+                <input type="checkbox" id="checkAll" onclick="test7();">
                 <label for="checkAll">모두 선택/해제</label>
             </td>
         </tr> 
@@ -250,59 +253,103 @@
                 <label for="subject2">수학</label>
             </td>
         </tr>
-        <style>
-            table {
-                border: 1px solid #000;
-                border-collapse: collapse;
-                margin: 30px 0;
-            }
-            th, td {
-                border: 1px solid #000;
-                padding: 10px;
-                text-align: center;
-            }
-        </style>
     </table>
+    <style>
+        table {
+            border: 1px solid #000;
+            border-collapse: collapse;
+            margin: 30px 0;
+        }
+        th, td {
+            border: 1px solid #000;
+            padding: 10px;
+            text-align: center;
+        }
+    </style>
+
+    <!-- 모두 선택/해제를 통해 개별 체크박스 제어 -->
+    <!-- name=subject 요소를 전체선택/해제 -->
     <script>
-        // name=subject를 전체선택/해제
-        // css선택자로 요소접근하기
-        // - document.querySelector(선택자) : 선택자와 일치하는 하나의 요소 리턴 
-        // - document.querySelectorAll(선택자) : 선택자와 일치하는 모든 요소를 유사배열로 리턴
-        // 주의사항
+        /*
         function test7() {
-            // var subjects = document.getElementsByName("subject");
+                // subject라는 name값을 가진 요소들을 subjects변수에 담음
+                var subjects = document.getElementsByName("subject");
+                console.log(subjects);
+                // 방법 1.
+                // 하나 하나에 접근해서 check처리 해주기
+                for(var i = 0; i < subjects.length; i++) {
+                        //setter로써 checked
+                        // subjects[i].checked = true; // 모두 선택만
+                        // subjects[i].checked = false; // 모두 선택해제만
+                        subjects[i].checked = checkAll.checked;
+                        // #checkAll의 checked 여부(true|false)에 따라 세팅
+                    }
+                }
+        */        
+
+        // 방법2.
+        // css선택자로 요소접근하기
+        // - document.querySelector(선택자) : 선택자와 일치하는 하나의(첫번째) 요소 리턴 
+                // 주의사항 : id가 아닌, 유사배열을 가진 선택자를 넣어도 첫번째 요소만 리턴
+        // - document.querySelectorAll(선택자) : 선택자와 일치하는 모든 요소를 유사배열로 리턴
+        function test7() {
             var subjects = document.querySelectorAll("[name=subject]");
             console.log(subjects);
+            // 0: input#subject0
+            // 1: input#subject1
+            // 2: input#subject2
+            // length: 3
             var checkAll = document.querySelector("#checkAll");
             console.log(checkAll);
+
             for(var i = 0; i < subjects.length; i++) {
-                //setter로써 checked
-                subjects[i].checked = checkAll.checked;
-            }
+                        subjects[i].checked = checkAll.checked;
+                    }
         }
     </script>
-
-    <!-- 개별체크박스를 통해 전체 선택 체크박스 제어하기 -->
     <script>
+
+    // 개별체크박스를 통해 전체 선택 체크박스 제어하기
+    // 전체 선택이었다가 일부 해제하면 모두 선택/해제 체크 해제,
+    // 전체 체크하면 모두 선택/해제 체크
+        /*
         function test8() {
+            // 방법1.
+            // 모든 개별 체크박스 (3개)
             var subjects = document.querySelectorAll("[name=subject]");
+            // 개별 체크박스 중 체크된 것들만
             var checkedSubjects = document.querySelectorAll("[name=subject]:checked");
-            checkAll.checked = (subjects.length == checkedSubjects.length);
+            // subjects의 배열길이와 checkedSubject의 배열길이가 같으면(true) 모두 체크되었다는 뜻
+            checkAll.checked = (subjects.length == checkedSubjects.length);           
         }
+        */
+        
+        /*
+        function test8() {
+            //방법2.
+            var subjects = document.querySelectorAll("[name=subject]");
+            for (i = 0; i < subjects.length; i++) {
+                if(!subjects[i].checked)
+                    return; //조기리턴
+            }
+            checkedAll.checked = true;
+        }
+        */
+
     </script>
 
     <!-- 체크한 것에 색상 변경 -->
     <style>
         /* 체크한 것에 on클래스 값 적용되도록 */
         td.on {
-            background-color: royalblue;
+            background-color: pink;
             color: #fff;
         }
     </style>
     <script>
-        function test8(chk) {
-            // 부모 td태그의 class값 제어
-            console.log(chk);
+        // 부모td태그의 class값 제어
+        function test8() {
+
         }
     </script>
 </body>
