--- a/web_client_workspace/03_javascript/index.html
+++ b/web_client_workspace/03_javascript/index.html
@@ -13,13 +13,17 @@
         <li><a href="01_hello_js.html">Hello JavaScript</a></li>
         <li><a href="02_datatype.html">Data Type</a></li>
         <li><a href="03_getElement.html">Get Element</a></li>
+        <li><a href="04_io.html">Input | Output</a></li>
         <li><a href="05_variable_scope.html">Variable | Scope</a></li>
         <li><a href="06_hoisting.html">Hoisting</a></li>
         <li><a href="07_api_String_Math_Date.html">String | Math | Date</a></li>
         <li><a href="08_casting.html">Casting</a></li>
-        <li><a href="@실습문제2.납품정보.html">@실습문제2.납품정보</a></li>
+        <li><a href="@실습문제2_납품정보.html">@실습문제2.납품정보</a></li>
         <li><a href="09_operator.html">Operator</a></li>
         <li><a href="10_array.html">Array</a></li>
+        <li><a href="@실습문제3_검색">@실습문제3_검색</a></li>
+        <li><a href="11_function.html">Function</a></li>
+        <li><a href="12_closure.html">Function - closure</a></li>
         
     </ul>
 </body>
