--- a/web_client_workspace/03_javascript/02_datatype.html
+++ b/web_client_workspace/03_javascript/02_datatype.html
@@ -99,7 +99,7 @@
 
             // 6. 함수형 (function)
             // 변수에 함수 담기
-            //var 변수명 = function([매개변수]){ 처리로직 [return 되돌려줄값;] }
+            //var 변수명 = function([매개변수]){ 처리로직 [return 되돌려줄값;] };
                 // 매개변수
                 // - 자바스크립트 함수 매개변수 선언부 역시 자료형을 선언하지 않는다.
                 // - 호출할 때 넘겨 들어온 값에 따라 자료형이 결정됨
