--- a/web_client_workspace/03_javascript/06_hoisting.html
+++ b/web_client_workspace/03_javascript/06_hoisting.html
@@ -10,11 +10,11 @@
     <h1> Hoisting </h1>
     <!-- hoisting : 위로 끌어올리다
          크레인같은 것에 연결해서 끌어올리는 것
-        -> 변수, 함수에 끌어올려서 미리 자동으로 선언을 해주는 것 -->
+        -> 변수, 함수를 끌어올려서 미리 자동으로 선언을 해주는 것 -->
 
     <script>
         // 위에서부터 아래로 한줄씩 실행됨
-        // 실행 전에 먼저 var 키워드가 붙은 변수를 위로 끌어올려줌
+        // 실행 전에 먼저 var 키워드가 붙은 변수를 모두 위로 끌어올려줌
         // 위로 끌어올려놓고 밑에서는 값대입만 하는 식으로 
         // var a; //var 키워드로 선언된 변수는 hoisting 된다. 
         // -> 선언하기 전에 미리 호출해도 오류가 나지 않음
@@ -26,7 +26,7 @@
         // console.log(a); 이거를 위로 끌어올려 먼저 실행하면? 
         
         // function foo; //function foo라는 것이 있다! 하고 함수선언식이 
-        //script태그 안 제일 위쪽***으로 눈에 보이지는 않지만 위로 끌어올려짐
+        // script태그 안 제일 위쪽***으로 눈에 보이지는 않지만 위로 끌어올려짐
 
         //선언 전 foo호출해도 작동함!
         foo();
@@ -39,13 +39,13 @@
 
         // 앞에서 bar라고 호출하면?
         bar();
-        //오류
+        // 오류
         // var 키워드가 있으니, 위로 hoisting되었을 텐데,
         // 대입전이니 undefined 상태, 함수인 것을 모름
         // 그걸 그냥 호출해버리면, 함수가 아닌데 왜 호출하느냐! 라는 에러!
         // 함수 선언식이면 아무 문제가 없으나 함수 표현식으로 var를 하면 이런식으로 에러남
         // Uncaught TypeError: bar is not a function
-        //함수 표현식
+        // 함수 표현식
         // bar라는 변수에 익명함수를 대입한 것! (이름이 없는 함수 - 익명함수)
         
         var bar = function() {
