--- a/web_client_workspace/03_javascript/index.html
+++ b/web_client_workspace/03_javascript/index.html
@@ -21,9 +21,14 @@
         <li><a href="@실습문제2_납품정보.html">@실습문제2.납품정보</a></li>
         <li><a href="09_operator.html">Operator</a></li>
         <li><a href="10_array.html">Array</a></li>
-        <li><a href="@실습문제3_검색">@실습문제3_검색</a></li>
+        <li><a href="@실습문제3_검색.html">@실습문제3_검색</a></li>
         <li><a href="11_function.html">Function</a></li>
         <li><a href="12_closure.html">Function - closure</a></li>
+        <li><a href="@실습문제_closure.html">@실습문제_closure_눈코딩</a></li>
+        <li><a href="13_object.html">Object</a></li>
+        <li><a href="14_objectArray.html">Object Array</a></li>
+        <li><a href="@실습문제_객체배열.html">@실습문제_객체배열</a></li>
+
         
     </ul>
 </body>
