--- a/web_client_workspace/03_javascript/14_objectArray.html
+++ b/web_client_workspace/03_javascript/14_objectArray.html
@@ -171,6 +171,8 @@
             // 콩돌이/가 멍멍 짖는다.
     }
 
+    // toString은 객체가 문자열로 보여져야 할때, 자동으로 변환되는 것
+    // toString은 호출하지 않아도 자동으로 호출됨
 
     </script>
 </body>
