--- a/web_client_workspace/03_javascript/index.html
+++ b/web_client_workspace/03_javascript/index.html
@@ -28,6 +28,7 @@
         <li><a href="13_object.html">Object</a></li>
         <li><a href="14_objectArray.html">Object Array</a></li>
         <li><a href="@실습문제_객체배열.html">@실습문제_객체배열</a></li>
+        <li><a href="@실습문제_객체배열_proto.html">@실습문제_객체배열_proto</a></li>
 
         
     </ul>
