--- a/web_client_workspace/03_javascript/index.html
+++ b/web_client_workspace/03_javascript/index.html
@@ -29,6 +29,8 @@
         <li><a href="14_objectArray.html">Object Array</a></li>
         <li><a href="@실습문제_객체배열.html">@실습문제_객체배열</a></li>
         <li><a href="@실습문제_객체배열_proto.html">@실습문제_객체배열_proto</a></li>
+        <li><a href="15_window.html">Window객체</a></li>
+        <li><a href="16_event.html">event</a></li>
 
         
     </ul>
