--- a/web_client_workspace/03_javascript/index.html
+++ b/web_client_workspace/03_javascript/index.html
@@ -31,6 +31,10 @@
         <li><a href="@실습문제_객체배열_proto.html">@실습문제_객체배열_proto</a></li>
         <li><a href="15_window.html">Window객체</a></li>
         <li><a href="16_event.html">event</a></li>
+        <li><a href="@실습문제_event.html">@실습문제_event</a></li>
+        <li><a href="17_regExp.html">Regular Expression</a></li>
+        <li><a href="@실습문제_regExp.html">@실습문제_regExp</a></li>
+
 
         
     </ul>
