--- a/web_client_workspace/03_javascript/15_window.html
+++ b/web_client_workspace/03_javascript/15_window.html
@@ -100,7 +100,8 @@ JavaScript
 
         function test2() {
             // 창을 닫는 메소드
-            w.close();
+            w.close(); // 새 창을 닫음
+            window.close(); // 원래 창을 닫음
         }
 
         /**
@@ -133,7 +134,7 @@ JavaScript
         // 3초뒤에 자동으로 창 닫기
         // cf. url에 공란을 주면 빈 창이 나옴
         function test4() {
-             var w =  open("", "newWindow", "width=500, height=300, top=300, left=300");
+             var w =  open("", "newWindow", "width=300, height=500, top=300, left=300");
             //  cf. 변수로 넣어주지 않으면 제어할 수 없음
             //js에 html넣기
              w.document.write("<h1>3초 팝업</h1>");
@@ -280,7 +281,8 @@ JavaScript
     function test8() {
         console.log(location);
         // assign 확인
-        // location.reload() - 현재 페이지 새로고침
+        // location.reload();
+        //현재 페이지 새로고침
 
         // 페이지 이동
         location.href = "https://naver.com";
@@ -297,8 +299,10 @@ JavaScript
     function test9() {
         console.log(history);
         // prototype객체에 여러 메소드들이 준비되어 있음
-        // history.back() : 뒤로가기
-        // history.forward() : 앞으로가기
+        // 뒤로가기
+        // history.back();
+        // 앞으로가기
+        history.forward();
         // history.go(n) : 1 | 0 | -1 등 2,3,4..모두 가능
         // 0은 새로고침
     }
@@ -314,8 +318,8 @@ JavaScript
         // width 모니터 너비
         // height 모니터 높이
         // 실제로 쓸 수 있는 크기
-        // availHeight: 가용너비 1040 (task bar를 제외한 높이)
-        // availWidth: 가용높이 1920
+        // availHeight: 가용너비 1040 (task bar를 제외한 너비)
+        // availWidth: 가용높이 1920 (task bar를 제외한 높이)
         // availLeft: 0 (오프셋 값)
 
         // 팝업창이 화면 가운데 위치시키도록 하고 싶을때,
@@ -340,7 +344,9 @@ JavaScript
     <input type="button" value="Node" onclick="test11();">
     <div class="img-wrapper"></div>
     <script>
-    //    Node객체 : 모든 DOM객체가 Node 객체를 상속받는다.
+    // Node객체 : 모든 DOM객체가 Node 객체를 상속받는다.
+    // 엘리먼트는 서로 부모, 자식, 혹은 형제자매 관계로 연결되어 있다. 
+    // 각각의 Node가 다른 Node와 연결된 정보를 보여주는 API를 통해서 문서를 프로그래밍적으로 탐색할 수 있다.
     function test11(){
         var h2 = document.querySelector("h2:last-of-type");
         console.dir(h2);
