--- a/web_client_workspace/03_javascript/@실습문제_regExp.html
+++ b/web_client_workspace/03_javascript/@실습문제_regExp.html
@@ -30,9 +30,9 @@
 
             // 2. 정규표현식 객체 생성
             // 1) -으로 이어서 입력한 경우
-            var regExp1 = /^\d{2}[01]\d[0-3]\d-[1-4]\d{6}$/;
+            var regExp1 = /^\d{2}(0[1-9]|1[012])(0[1-9]|[1-2][0-9]|3[01])-[1-4]\d{6}$/;
             // 2) 숫자만 입력한 경우
-            var regExp2 = /^\d{2}[01]\d[0-3]\d[1-4]\d{6}$/;
+            var regExp2 = /^\d{2}(0[1-9]|1[012])(0[1-9]|[1-2][0-9]|3[01])[1-4]\d{6}$/;
 
 
             // 3. 표현식 검사 + 분기처리
@@ -52,6 +52,50 @@
                 location.reload();
             }
         }
+    </script>
+
+    <form action="">
+        <fieldset>
+            <legend>아이디 유효성 검사</legend>
+            <input type="text" id="userId" name="userId" placeholder="아이디">
+            <input type="submit" value="제출">
+
+        </fieldset>
+    </form>
+
+    <script>
+        /**
+         * 올바른 아이디가 아니면 서버에 제출되지 않도록
+         * 
+         * userId가 8-12자리
+         * 영문자/숫자/특수문자 하나이상 포함    \d   [~!@#$%^&*()_+|<>?:{}]
+         * 영문자로 시작할 때만 유효 [a-zA-Z]
+         * 
+         * 유효하지 않다면 폼이 제출되어서는 안됨
+         */
+        document.querySelector("form").onsubmit = function(){
+
+            var val = userId.value;
+         
+            // 000(?=(정규표현식))
+            if (/^.{8,12}$/.test(val) == false) {
+                alert("아이디는 8~12자리여야 합니다.");
+                return false;
+            }
+            // 2. 영문자/숫자/특수문자 *!^/@$ 하나이상 포함
+            if(
+                (!/[a-z]/i.test(val)) && (!/\d/.test(val)) && (!/[*!^/@$]/.test(val))
+            ) {
+                alert("영문자/숫자/특수문자 하나이상 포함해야 함");
+                return false;
+            }
+
+            if(!/^[a-zA-Z]/.test(val)){
+                alert("영문자로 시작해야 함");
+                return false;
+            }
+
+        };
     </script>
     
 </body>
