--- a/web_client_workspace/03_javascript/index.html
+++ b/web_client_workspace/03_javascript/index.html
@@ -34,6 +34,7 @@
         <li><a href="@실습문제_event.html">@실습문제_event</a></li>
         <li><a href="17_regExp.html">Regular Expression</a></li>
         <li><a href="@실습문제_regExp.html">@실습문제_regExp</a></li>
+        <li><a href="@실습문제_유효성검사.html">@실습문제_유효성검사</a></li>
 
 
         
