--- a/web_client_workspace/namyunji/02_interest.html
+++ b/web_client_workspace/namyunji/02_interest.html
@@ -46,6 +46,7 @@
     </style>
 
     <article>
+        <img width="900px" src="img/interest/interest_bg.png" alt="">
         <div class="wrapper">
             <video class="video" poster="img/interest/01.png" src="video/01.mp4" controls></video>
             <p>#hello!!</p>
