--- a/web_client_workspace/namyunji/03_roadmap.html
+++ b/web_client_workspace/namyunji/03_roadmap.html
@@ -38,6 +38,7 @@
         </nav>   
     </header>
 
+    <img width="1000px" src="img/roadmap/roadmap_sample.png" alt="">
     <style>
         #here {
             text-decoration: line-through;
