--- a/web_client_workspace/04_jquery/index.html
+++ b/web_client_workspace/04_jquery/index.html
@@ -15,6 +15,12 @@
         <li><a href="03_filter.html">Filter</a></li>
         <li><a href="04_traversing.html">Traversing</a></li>
         <li><a href="05_event.html">Event</a></li>
+        <li><a href="@실습문제_02_filter.html">@실습문제_02_filter</a></li>
+        <li><a href="06_jquery_api.html">jquery API</a></li>
+        <li><a href="07_dom.html">DOM 제어</a></li>
+        <li><a href="08_css.html">CSS</a></li>
+
+
 
     </ul>
     
